# supermag

./: .gitignore  NOTES.md  README.md  check_hapi_names.py  check_hapi_names_old.py  pyproject.toml  rsync-to-mag.sh  tox.ini
etc/: rsync-to-mag.sh
supermag/: __init__.py  catalog.indices.json  catalog.mag.json  catalog.py  cli.py  config.json  config.py  data.py  data_cache.py  indices.json  inventory.py  locations.py  samples.py  util.py
supermag/indices_old/: indices_all.json  indices_imf.json  indices_reg.json  indices_swi.json
test/: conftest.py  test_cache.py  test_cafile.py  test_cli.py  test_data.py  test_data_cli.py  test_indices.py  test_inventory.py  test_inventory_cli.py  test_locations.py  test_mag.py  test_samples.py  util.py
test/check_name_mapping/: check_hapi_names.py  check_hapi_names_old.py
test/check_name_mapping/indices_old/: indices_base.json  indices_dark.json  indices_sun.json
test/compare/: compare_parallel_data_requests.py
test/current-server/: server-check.sh
test/parallel/: compare_parallel_data_requests.py
