[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "supermag"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "urllib3",
  "certifi",
  "utilrsw @ git+https://github.com/rweigel/utilrsw@main"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["supermag*"]

[project.scripts]
supermag-data      = "supermag.cli:main_data"
supermag-catalog   = "supermag.cli:main_catalog"
supermag-inventory = "supermag.cli:main_inventory"
supermag-locations = "supermag.cli:main_locations"
