[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "supermag"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "urllib3",
  "certifi",
  "pandas",
  "utilrsw @ git+https://github.com/rweigel/utilrsw@e8463b0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["supermag*"]

[tool.setuptools.package-data]
supermag = ["*.json"]

[project.scripts]
supermag-data      = "supermag.cli:main_data"
supermag-catalog   = "supermag.cli:main_catalog"
supermag-inventory = "supermag.cli:main_inventory"
supermag-samples   = "supermag.cli:main_samples"
